--- a/App.config
+++ b/App.config
@@ -37,117 +37,127 @@
   </appSettings>
   <GroupElementsSection>
 	  <!--				
-			Name			:	Status		:	.Net Type		:	Purpose											Notes(s)
-			=============   :	=========   :	=============   :   ====================================		:	==========================================================
-			ID				:	Required	:	System.String	:	Unique Identifier							:   Unique Identifier; no 2 can be identical, ID is key in a Dictionary object.
-																													- Suggest T10, T20, T30, T40... ABT FilePro Traveler Test Operations.
-			Required		:	Required	:	System.Boolean	:	Does Customer require running this Group?	:	If Required = true, it's a Group of Tests the UUT's customer requires
-																													be executed & pass in order to ship the UUT.
-																													- Required Groups generally correspond to FilePro Traveler
-																													  operations; T10, T20, T30...
-																													- If Required = false, Group is a custom subset of Tests
-																													  solely useful for troubleshooting UUTs that don't pass
-																													  their Required Groups.
-																													- Non-required Groups don't create valid test data nor report
-																													  overall UUT results, just their custom Group results.
-																													- Multiple Groups can be required, if there are multiple
-																													  FilePro Test Operations; T10, T20, T30...
-																													- Recommend ordering all Required Groups by Test Operation,
-																													  then non-Required as desired.
-																													- Order of Group appearance in this App.config determines order of
-																													  appearance when selecting Groups in GroupSelection ListView,
-																													  so optimally order them in the sequence they're performed;
-																													  (T10, T20, T30...)
-			Summary			:	Required	:	System.String	:	Concise description of Group				:	PowerUp performs all power application/measurement tests.
-			Detail			:	Optional	:	System.String	:	Optional verbose description of Group		:	PowerUp:
-																													- Apply/measure +28.0 VDC.
-																													- Apply/measure +5.0 VDC.
-																													- Apply/measure +3.3 VDC.
-																													- Measure derived ±12.0 VDC
-																													- Measure derived +2.5 VDC
-																													- Measure derived +1.8 VDC
-																													- Measure derived +1.2 VDC
-			TestIDs			:	Required	:	System.String	:	Tests in Group, *in order of execution*		:	1 or more TestIDs from TestElements, separated by '|'.
-																													- Tests execute in *entry order*:
-																													  - Entry "T3|T1|T2" executed in sequence (T3, T1, T2).
-																													  - Entry "T1|T2|T3" executed in sequence (T1, T2, T3).
-																													  - Entry "T2|T3|T1" executed in sequence (T2, T3, T1).
+			Name			:	Status		:	Purpose											Notes(s)
+			=============   :	=========   :   ====================================		:	==========================================================
+			ID				:	Required	:	Unique Identifier							:   Unique Identifier; no 2 can be identical, ID is key in a Dictionary object.
+																								- Suggest T10, T20, T30, T40... ABT FilePro Traveler Test Operations.
+			Required		:	Required	:	Does Customer require running this Group?	:	If Required = true, it's a Group of Tests the UUT's customer requires
+																								be executed & pass in order to ship the UUT.
+																								- Required Groups generally correspond to FilePro Traveler
+																								  operations; T10, T20, T30...
+																								- Multiple Groups can be required, if there are multiple
+																								  FilePro Test Operations; T10, T20, T30...
+																								- If Required = false, Group is a custom subset of Tests
+																								  solely useful for troubleshooting UUTs that don't pass
+																								  their Required Groups.
+																								- Non-required Groups don't create valid test data nor report
+																								  overall UUT results, just their custom Group results.
+																								- Recommend ordering all Required Groups by Test Operation,
+																								  then non-Required as desired.
+																								- Order of Group appearance in this App.config determines order of
+																								  appearance when selecting Groups in GroupSelection ListView,
+																								  so optimally order them in the sequence they're performed;
+																								  (T10, T20, T30...)
+			Summary			:	Required	:	Concise description of Group				:	PowerUp performs all power application/measurement tests.
+			Detail			:	Optional	:	Optional verbose description of Group		:	PowerUp:
+																								- Apply/measure +28.0 VDC.
+																								- Apply/measure +5.0 VDC.
+																								- Apply/measure +3.3 VDC.
+																								- Measure derived ±12.0 VDC
+																								- Measure derived +2.5 VDC
+																								- Measure derived +1.8 VDC
+																								- Measure derived +1.2 VDC
+			TestIDs			:	Required	:	Tests in Group, *in order of execution*		:	1 or more TestIDs from TestElements, separated by '|'.
+																								- Tests execute in *entry order*:
+																								  - Entry "P2|P3|P1" executed in sequence (P2, P3, P1).
+																								  - Entry "P3|P1|P2" executed in sequence (P3, P1, P2).
+																								  - Entry "P1|P2|P3" executed in sequence (P1, P2, P3).
+		
+		ABT Test Operations to Raytheon 0001624557 Test Paragraphs:
+			T10: 5.1 SSTO Flying Probe, P00010.
+			T20: 5.2 Inductance Check, P00050.
+			T30: 5.3 Initial Power Up, P00100 - P00200.
+				  5.4 UUT Programming, P00300 - P00600.
+				  5.5 Initial Configuration, P00700 - P00750.
+				  5.6 Power Stage Health Check, P00800 - P10200.
+			T50: 6.0 Calibration & Final Test, P10300 - P11800.
 		-->
 	  <GroupElements>
 		  <GroupElement ID="ID0" Required="false" Summary="Summary0" Detail="Detail0" TestIDs="ID0" />
-		  <GroupElement ID="ID1" Required="true" Summary="Summary1" Detail="Detail1" TestIDs="ID0|ID1" />
-		  <GroupElement ID="ID2" Required="true" Summary="Summary2" Detail="Detail2" TestIDs="ID0|ID1|ID2" />
+		  <GroupElement ID="ID1" Required="true"  Summary="Summary1" Detail="Detail1" TestIDs="ID0|ID1" />
+		  <GroupElement ID="ID2" Required="true"  Summary="Summary2" Detail="Detail2" TestIDs="ID0|ID1|ID2" />
 		  <!-- Spaces are permitted in GroupElement fields. -->
 	  </GroupElements>
   </GroupElementsSection>
   <TestElementsSection>
 	  <!--				
-			Name			:	Status		:	.Net Type		:	Purpose										Notes/Examples
-			=============   :	=========   :	=============   :   ====================================	:	==========================================================
-			ID				:	Required	:	System.String	:	Unique Identifier						:	Unique Identifier; no 2 can be identical, ID is key in a Dictionary object.
-																												- Test001, Test002, Test003...
-																												- *Must* also be a valid C# identifier; see 
-																												  https://learn.microsoft.com/en-us/dotnet/csharp/fundamentals/coding-style/identifier-names.
-																												- Recommend alpha-numerically ordering to avoid duplications,
-																												  which throw Exceptions.
-																												- Can be ordered as desired though; test execution order
-																												  *solely* determined by GroupElement TestIDs test ordering.
-																												- Cannot contain | character.
-																												  - Using character '|' to separate GroupsToTestsElement IDTests.
-																												  - Thus TestElement IDs cannot contain character '|' in them.
-																												  - ID="Test001 valid.
-																												  - ID="Test|001" invalid
-			Summary			:	Required	:	System.String	:	Concise description of Test				:	Apply/measure +5V DC Input Voltage pre-programming.
-			Detail			:	Optional	:	System.String	:	Optional verbose description of Test	:	Apply +5V DC Voltage from +Vcc to GND.
-																												- Limit current to 0.75 Amps.
-																												- Measure voltage after 2.0 seconds delay.
-																												- Perform test before U6 µController and U7 EEPROM are programmed.
-			LimitLow		:	Optional,	:	System.String	:	Test's low limit						:	4.75, for 5.0VDC with -5% tolerance
-								with caveats;																	- Parsed as Double.TryParse(LimitLow, NumberStyles.Float, CultureInfo.CurrentCulture, out dMeasurement);
-								see Invalid &																	- https://learn.microsoft.com/en-us/dotnet/api/system.double.tryparse?view=net-7.0#system-double-tryparse(system-string-system-globalization-numberstyles-system-iformatprovider-system-double
-								Valid Tests																		- https://learn.microsoft.com/en-us/dotnet/api/system.globalization.numberstyles?view=net-7.0#system-globalization-numberstyles-float
-								below.																			- Scientific Notation allowed & encouraged:
-																												  - 1.0E5 is valid instead of 100000.0.
-																												  - 1.5E-5 is valid instead of 0.000015.
-																												- Postive/Negative +/- signs allowed in both exponent & significand:
-																												  +1.0E+5 is valid for +100000.0.
-																												   - Reccommend 1.0E5 though.
-																												  -1.0E5 is valid for -1000000.0.
-																												  1.5E-5 is valid for 0.000015.
-																												  -1.5E-5 is valid for -0.000015.
-																												- Int32 & Double both allowed:
-																												  - 100000 & 100000.0 both valid.
-																												- Commas not allowed:
-																												  - 100000 & 1000000 both valid.
-																												  - 100,000 & 1,000,000 both invalid.
-																												  - Recommend 1E5 and 1E6 instead.
-			LimitHigh		:	Optional,	:	System.String	:	Test's high limit						:	5.25, for 5.0VDC with +5% tolerance
-								with caveats;																	- Parsed identically as LimitLow.
+			Name			:	Status		:	Purpose											Notes/Examples
+			=============   :	=========   :	====================================		:	==========================================================
+			ID				:	Required	:	Unique Identifier							:	Unique Identifier; no 2 can be identical, ID is key in a Dictionary object.
+																								- Test001, Test002, Test003...
+																								- *Must* also be a valid C# identifier; see 
+																								  https://learn.microsoft.com/en-us/dotnet/csharp/fundamentals/coding-style/identifier-names.
+																								- Recommend alpha-numerically ordering to avoid duplications,
+																								  which throw Exceptions.
+																								- Can be ordered as desired though; test execution order
+																								  *solely* determined by GroupElement TestIDs test ordering.
+																								- Cannot contain | character.
+																								  - Using character '|' to separate GroupsToTestsElement IDTests.
+																								  - Thus TestElement IDs cannot contain character '|' in them.
+																								  - ID="Test001 valid.
+																								  - ID="Test|001" invalid
+			Summary			:	Required	:	Concise description of Test					:	Apply/measure +5V DC Input Voltage pre-programming.
+			Detail			:	Optional	:	Optional verbose description of Test		:	Apply +5V DC Voltage from +Vcc to GND.
+																								- Limit current to 0.75 Amps.
+																								- Measure voltage after 2.0 seconds delay.
+																								- Perform test before U6 µController and U7 EEPROM are programmed.
+			LimitLow		:	Optional,	:	Test's low limit							:	4.75, for 5.0VDC with -5% tolerance
+								with caveats;													- Parsed as Double.TryParse(LimitLow, NumberStyles.Float, CultureInfo.CurrentCulture, out dMeasurement);
+								see Invalid &													- https://learn.microsoft.com/en-us/dotnet/api/system.double.tryparse?view=net-7.0#system-double-tryparse(system-string-system-globalization-numberstyles-system-iformatprovider-system-double
+								Valid Tests														- https://learn.microsoft.com/en-us/dotnet/api/system.globalization.numberstyles?view=net-7.0#system-globalization-numberstyles-float
+								below.															- Scientific Notation allowed & encouraged:
+																								  - 1.0E5 is valid instead of 100000.0.
+																								  - 1.5E-5 is valid instead of 0.000015.
+																								  - Postive/Negative +/- signs allowed in both exponent & significand:
+																								  +1.0E+5 is valid for +100000.0.
+																								  - Reccommend 1.0E5 though.
+																								  -1.0E5 is valid for -1000000.0.
+																								  1.5E-5 is valid for 0.000015.
+																								  -1.5E-5 is valid for -0.000015.
+																								- Int32 & Double both allowed:
+																								  - 100000 & 100000.0 both valid.
+																								- Commas not allowed:
+																								  - 100000 & 1000000 both valid.
+																								  - 100,000 & 1,000,000 both invalid.
+																								  - Recommend 1E5 and 1E6 instead.
+			LimitHigh		:	Optional,	:	Test's high limit						:		5.25, for 5.0VDC with +5% tolerance
+								with caveats;													- Parsed identically as LimitLow.
 								see Invalid &	
 								Valid Tests		
-								below.																															
-			Units			:	Optional	:	System.String	:	SI Base & Derived Units					:	A, V, F, H, Ω, S, °C, s, Hz, W, VA for respectively
-																												amperes, volts, farads, henries, ohms, siemens,
-																												°Celcius, seconds, hertz, watts, volt-amperes.
-																												https://en.wikipedia.org/wiki/SI_base_unit
-																												https://en.wikipedia.org/wiki/SI_derived_unit
-																												- Optionally "" or "N/A", when Units = Not Applicable: 
-																												- NOTE: do not use Metric prefixes:																												- Do not use Metric Prefixes!
-																												  - That is, do not use micro, milli, kilo, mega, etc.
-																												    or their μ, m, k, M, etc. symbols either.
-																												  - Instead, always normalize LimitLow & LimitHigh to
-																												    unitary SI Units without prefixes.
-																													- 10000 Ω is valid.
-																													- 10 kiloΩ or 10 kΩ invalid.
-																												- NOTE: Units are purely cosmetic in function; they aren't used
-																												  to calculate Test PASS/FAIL results as LimitLow & LimitHigh are,
-																												  only for reporting what Units their Test's measured values are in.
-			UnitType		:	Optional	:	System.String	:											:	AC, DC, Peak, PP, RMS respectively for Alternating Current,
-																												Direct Current, Peak, Peak-to-Peak, Root-Mean-Squared.
-																											    - NOTE: UnitTypes are purely cosmetic in function; they aren't used
-																												  to calculate Test PASS/FAIL results as LimitLow & LimitHigh are,
-																												  only for reporting metadata about the Units the tests measured
-																												  values are in.
+								below.																									
+			Units			:	Optional	:	SI Base & Derived Units					:		A, V, F, H, Ω, S, °C, s, Hz, W, VA for respectively
+																								amperes, volts, farads, henries, ohms, siemens,
+																								°Celcius, seconds, hertz, watts, volt-amperes.
+																								https://en.wikipedia.org/wiki/SI_base_unit
+																								https://en.wikipedia.org/wiki/SI_derived_unit
+																								- Optionally "" or "N/A", when Units = Not Applicable: 
+																								- NOTE: do not use Metric prefixes:																												- Do not use Metric Prefixes!
+																								  - That is, do not use micro, milli, kilo, mega, etc.
+																								    or their μ, m, k, M, etc. symbols either.
+																								  - Instead, always normalize LimitLow & LimitHigh to
+																								    unitary SI Units without prefixes.
+																									- 10000 Ω is valid.
+																									- 10 kiloΩ or 10 kΩ invalid.
+																									- Again, recommend Scientific Notation when applicable.
+																								- NOTE: Units are purely cosmetic in function; they aren't used
+																								  to calculate Test PASS/FAIL results as LimitLow & LimitHigh are,
+																								  only for reporting what Units their Test's measured values are in.
+			UnitType		:	Optional	:											:		AC, DC, Peak, PP, RMS respectively for Alternating Current,
+																								Direct Current, Peak, Peak-to-Peak, Root-Mean-Squared.
+																								- NOTE: UnitTypes are purely cosmetic in function; they aren't used
+																								  to calculate Test PASS/FAIL results as LimitLow & LimitHigh are,
+																								  only for reporting metadata about the Units the tests measured
+																								  values are in.
 
 			Invalid Tests:
 			- LimitLow = LimitHigh = String.Empty.
@@ -190,7 +200,7 @@
 			  - Permits multiple measurements or operations to be performed & logged in a single Test, but with a *single* overall result.
 			    - Tradeoff is LimitLow/LimitHigh aren't defined or modifiable from this App.config file, only defined/modifiable in the Test's method.
 		-->
-    <TestElements>
+	  <TestElements>
 		<TestElement ID="ID0"  Summary="Summary0"  Detail="Detail0"  LimitLow=""			LimitHigh=""			Units="Units0"	UnitType="UnitType0"/>
 		<TestElement ID="ID1"  Summary="Summary1"  Detail="Detail1"  LimitLow=""			LimitHigh="LimitHigh"	Units="Units1"	UnitType="UnitType1"/>
 		<TestElement ID="ID2"  Summary="Summary2"  Detail="Detail2"  LimitLow="LimitLow"	LimitHigh=""			Units="Units2"	UnitType="UnitType2"/>
