--- a/App.config
+++ b/App.config
@@ -69,9 +69,9 @@
 																								- Measure derived +1.2 VDC
 			TestIDs			:	Required	:	Tests in Group, *in order of execution*		:	1 or more TestIDs from TestElements, separated by '|'.
 																								- Tests execute in *entry order*:
-																								  - Entry "P2|P3|P1" executed in sequence (P2, P3, P1).
-																								  - Entry "P3|P1|P2" executed in sequence (P3, P1, P2).
-																								  - Entry "P1|P2|P3" executed in sequence (P1, P2, P3).
+																								  - Entry "T3|T1|T2" executed in sequence (T3, T1, T2).
+																							      - Entry "T1|T2|T3" executed in sequence (T1, T2, T3).
+																							      - Entry "T2|T3|T1" executed in sequence (T2, T3, T1).
 		
 		ABT Test Operations to Raytheon 0001624557 Test Paragraphs:
 			T10: 5.1 SSTO Flying Probe, P00010.
