--- a/ABTTestLibrary.csproj
+++ b/ABTTestLibrary.csproj
@@ -35,11 +35,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="ABTTestLibraryForm.cs">
+    <Compile Include="TestForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ABTTestLibraryForm.Designer.cs">
-      <DependentUpon>ABTTestLibraryForm.cs</DependentUpon>
+    <Compile Include="TestForm.Designer.cs">
+      <DependentUpon>TestForm.cs</DependentUpon>
     </Compile>
     <Compile Include="AppConfig\ConfigGroups.cs" />
     <Compile Include="AppConfig\ConfigSettings.cs" />
@@ -67,8 +67,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ABTTestLibraryForm.resx">
-      <DependentUpon>ABTTestLibraryForm.cs</DependentUpon>
+    <EmbeddedResource Include="TestForm.resx">
+      <DependentUpon>TestForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="AppConfig\GroupSelection.resx">
