--- a/App.config
+++ b/App.config
@@ -6,11 +6,11 @@
   </configSections>
   <appSettings>
     <!-- App.-->
-    <!-- Standard ABTTestLibApp configuration settings, specific to the test application.-->
+    <!-- Standard ABTTestLibrary App configuration settings, specific to the test application.-->
     <add key="APP_Revision" value="1.0" />
     <add key="APP_TestEventsEnabled" value="true" />
     <!-- See https://github.com/Amphenol-Borisch-Technologies/TestEvents -->
-    <!-- Standard ABTTestLibApp Logger configuation settings, specific to the Logger sub-system.-->
+    <!-- Standard ABTTestLibrary Logger configuation settings, specific to the Logger sub-system.-->
     <add key="LOGGER_FileEnabled" value="true" />
     <!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
     <!-- Can choose to Log to Text only, SQL only, both Text & SQL or neither, depending what the Customer requires. -->
@@ -21,7 +21,7 @@
     <!-- Can choose to Log to Text only, SQL only, both Text & SQL or neither, depending what the Customer requires. -->
     <add key="LOGGER_SQLConnectionString" value="" />
     <!--  SQL connection string only relevant if LOGGER_SQLEnabled is true. -->
-    <!-- Standard ABTTestLibApp UUT configuration settings, specific to the Unit Under Test. -->
+    <!-- Standard ABTTestLibrary UUT configuration settings, specific to the Unit Under Test. -->
     <add key="UUT_Customer" value="UUT_Customer" />
     <add key="UUT_Type" value="UUT_Type" />
 	  <!-- Reccommended choices: { System, Unit, CCA, Component }. -->
