--- a/ABTTestLibrary.csproj
+++ b/ABTTestLibrary.csproj
@@ -42,7 +42,7 @@
       <DependentUpon>TestForm.cs</DependentUpon>
     </Compile>
     <Compile Include="AppConfig\ConfigGroups.cs" />
-    <Compile Include="AppConfig\ConfigSettings.cs" />
+    <Compile Include="AppConfig\ConfigLib.cs" />
     <Compile Include="AppConfig\GroupSelection.cs">
       <SubType>Form</SubType>
     </Compile>
