--- a/App.config
+++ b/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="GroupElementsSection" type="ABTTestLibrary.AppConfig.GroupElementsSection, ABTTestLibrary" />
-    <section name="TestElementsSection" type="ABTTestLibrary.AppConfig.TestElementsSection, ABTTestLibrary" />
+    <section name="GroupElementsSection" type="ABTTestLibrary.Config.GroupElementsSection, ABTTestLibrary" />
+    <section name="TestElementsSection" type="ABTTestLibrary.Config.TestElementsSection, ABTTestLibrary" />
   </configSections>
   <appSettings>
     <!-- App.-->
