--- a/App.config
+++ b/App.config
@@ -5,12 +5,6 @@
     <section name="TestElementsSection" type="ABTTestLibrary.Config.TestElementsSection, ABTTestLibrary" />
   </configSections>
   <appSettings>
-    <!-- App.-->
-    <!-- Standard ABTTestLibrary App configuration settings, specific to the test application.-->
-    <add key="APP_Revision" value="1.0" />
-    <add key="APP_TestEventsEnabled" value="true" />
-    <!-- See https://github.com/Amphenol-Borisch-Technologies/TestEvents -->
-    <!-- Standard ABTTestLibrary Logger configuation settings, specific to the Logger sub-system.-->
     <add key="LOGGER_FileEnabled" value="true" />
     <!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
     <!-- Can choose to Log to Text only, SQL only, both Text & SQL or neither, depending what the Customer requires. -->
@@ -21,10 +15,12 @@
     <!-- Can choose to Log to Text only, SQL only, both Text & SQL or neither, depending what the Customer requires. -->
     <add key="LOGGER_SQLConnectionString" value="" />
     <!--  SQL connection string only relevant if LOGGER_SQLEnabled is true. -->
+	<add key="LOGGER_TestEventsEnabled" value="true" />
+	<!-- See https://github.com/Amphenol-Borisch-Technologies/TestEvents -->
     <!-- Standard ABTTestLibrary UUT configuration settings, specific to the Unit Under Test. -->
     <add key="UUT_Customer" value="UUT_Customer" />
     <add key="UUT_Type" value="UUT_Type" />
-	  <!-- Reccommended choices: { System, Unit, CCA, Component }. -->
+    <!-- Reccommended choices: { System, Unit, CCA, Component }. -->
     <add key="UUT_Number" value="UUT_Number" />
     <add key="UUT_Revision" value="UUT_Revision" />
     <add key="UUT_Description" value="UUT_Description" />
@@ -33,10 +29,9 @@
     <!-- These settings should be initialized in a local library specific to the test program/application. -->
     <add key="CUSTOM_SMBusAddress" value="40" />
     <!-- System Management Bus device address, in hexadecimal format. -->
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <GroupElementsSection>
-	  <!--				
+    <!--				
 			Name			:	Status		:	Purpose											Notes(s)
 			=============   :	=========   :   ====================================		:	==========================================================
 			ID				:	Required	:	Unique Identifier							:   Unique Identifier; no 2 can be identical, ID is key in a Dictionary object.
@@ -82,15 +77,15 @@
 				  5.6 Power Stage Health Check, P00800 - P10200.
 			T50: 6.0 Calibration & Final Test, P10300 - P11800.
 		-->
-	  <GroupElements>
-		  <GroupElement ID="ID0" Required="false" Summary="Summary0" Detail="Detail0" TestIDs="ID0" />
-		  <GroupElement ID="ID1" Required="true"  Summary="Summary1" Detail="Detail1" TestIDs="ID0|ID1" />
-		  <GroupElement ID="ID2" Required="true"  Summary="Summary2" Detail="Detail2" TestIDs="ID0|ID1|ID2" />
-		  <!-- Spaces are permitted in GroupElement fields. -->
-	  </GroupElements>
+    <GroupElements>
+      <GroupElement ID="ID0" Required="false" Summary="Summary0" Detail="Detail0" TestIDs="ID0" />
+      <GroupElement ID="ID1" Required="true" Summary="Summary1" Detail="Detail1" TestIDs="ID0|ID1" />
+      <GroupElement ID="ID2" Required="true" Summary="Summary2" Detail="Detail2" TestIDs="ID0|ID1|ID2" />
+      <!-- Spaces are permitted in GroupElement fields. -->
+    </GroupElements>
   </GroupElementsSection>
   <TestElementsSection>
-	  <!--				
+    <!--				
 			Name			:	Status		:	Purpose											Notes/Examples
 			=============   :	=========   :	====================================		:	==========================================================
 			ID				:	Required	:	Unique Identifier							:	Unique Identifier; no 2 can be identical, ID is key in a Dictionary object.
@@ -200,18 +195,18 @@
 			  - Permits multiple measurements or operations to be performed & logged in a single Test, but with a *single* overall result.
 			    - Tradeoff is LimitLow/LimitHigh aren't defined or modifiable from this App.config file, only defined/modifiable in the Test's method.
 		-->
-	  <TestElements>
-		<TestElement ID="ID0"  Summary="Summary0"  Detail="Detail0"  LimitLow=""			LimitHigh=""			Units="Units0"	UnitType="UnitType0"/>
-		<TestElement ID="ID1"  Summary="Summary1"  Detail="Detail1"  LimitLow=""			LimitHigh="LimitHigh"	Units="Units1"	UnitType="UnitType1"/>
-		<TestElement ID="ID2"  Summary="Summary2"  Detail="Detail2"  LimitLow="LimitLow"	LimitHigh=""			Units="Units2"	UnitType="UnitType2"/>
-		<TestElement ID="ID3"  Summary="Summary3"  Detail="Detail3"  LimitLow="LimitLow"	LimitHigh="LimitHigh"	Units="Units3"	UnitType="UnitType3"/>
-		<TestElement ID="ID4"  Summary="Summary4"  Detail="Detail4"  LimitLow="0"			LimitHigh="1"			Units="Units4"	UnitType="UnitType4"/>
-		<TestElement ID="ID5"  Summary="Summary5"  Detail="Detail5"  LimitLow="1"			LimitHigh="0"			Units="Units5"	UnitType="UnitType5"/>
-		<TestElement ID="ID6"  Summary="Summary6"  Detail="Detail6"  LimitLow="1"			LimitHigh="1"			Units="Units6"	UnitType="UnitType6"/>
-		<TestElement ID="ID7"  Summary="Summary7"  Detail="Detail7"  LimitLow="0"			LimitHigh=""			Units="Units7"	UnitType="UnitType7"/>
-		<TestElement ID="ID8"  Summary="Summary8"  Detail="Detail8"  LimitLow=""			LimitHigh="1"			Units="Units8"	UnitType="UnitType8"/>
-		<TestElement ID="ID9"  Summary="Summary9"  Detail="Detail9"  LimitLow="Limit"		LimitHigh="Limit"		Units="N/A"		UnitType="UnitType9"/>
-		<TestElement ID="ID10" Summary="Summary10" Detail="Detail10"  LimitLow="CUSTOM"		LimitHigh="CUSTOM"		Units="Units10"	UnitType="UnitType10"/>
+    <TestElements>
+      <TestElement ID="ID0" Summary="Summary0" Detail="Detail0" LimitLow="" LimitHigh="" Units="Units0" UnitType="UnitType0" />
+      <TestElement ID="ID1" Summary="Summary1" Detail="Detail1" LimitLow="" LimitHigh="LimitHigh" Units="Units1" UnitType="UnitType1" />
+      <TestElement ID="ID2" Summary="Summary2" Detail="Detail2" LimitLow="LimitLow" LimitHigh="" Units="Units2" UnitType="UnitType2" />
+      <TestElement ID="ID3" Summary="Summary3" Detail="Detail3" LimitLow="LimitLow" LimitHigh="LimitHigh" Units="Units3" UnitType="UnitType3" />
+      <TestElement ID="ID4" Summary="Summary4" Detail="Detail4" LimitLow="0" LimitHigh="1" Units="Units4" UnitType="UnitType4" />
+      <TestElement ID="ID5" Summary="Summary5" Detail="Detail5" LimitLow="1" LimitHigh="0" Units="Units5" UnitType="UnitType5" />
+      <TestElement ID="ID6" Summary="Summary6" Detail="Detail6" LimitLow="1" LimitHigh="1" Units="Units6" UnitType="UnitType6" />
+      <TestElement ID="ID7" Summary="Summary7" Detail="Detail7" LimitLow="0" LimitHigh="" Units="Units7" UnitType="UnitType7" />
+      <TestElement ID="ID8" Summary="Summary8" Detail="Detail8" LimitLow="" LimitHigh="1" Units="Units8" UnitType="UnitType8" />
+      <TestElement ID="ID9" Summary="Summary9" Detail="Detail9" LimitLow="Limit" LimitHigh="Limit" Units="N/A" UnitType="UnitType9" />
+      <TestElement ID="ID10" Summary="Summary10" Detail="Detail10" LimitLow="CUSTOM" LimitHigh="CUSTOM" Units="Units10" UnitType="UnitType10" />
     </TestElements>
   </TestElementsSection>
   <runtime>
@@ -321,16 +316,4 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
