--- a/App.config
+++ b/App.config
@@ -9,7 +9,7 @@
 		<add key="LOGGER_FileEnabled" value="true" />
 		<!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
 		<!-- Can choose to Log to Text only, SQL only, both Text & SQL or neither, depending what the Customer requires. -->
-		<add key="LOGGER_FilePath" value="LOGGER_FilePath" />
+		<add key="LOGGER_FilePath" value="ABTTestLibraryLog.txt" />
 		<!-- Text Log Paths are only relevant if LOGGER_FileEnabled is true. -->
 		<add key="LOGGER_SQLEnabled" value="false" />
 		<!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
@@ -82,9 +82,9 @@
 
 	-->
 		<GroupElements>
-			<GroupElement ID="ID0" Required="false" Summary="Summary0" Detail="Detail0" TestIDs="ID0" />
-			<GroupElement ID="ID1" Required="true" Summary="Summary1" Detail="Detail1" TestIDs="ID0|ID1" />
-			<GroupElement ID="ID2" Required="true" Summary="Summary2" Detail="Detail2" TestIDs="ID0|ID1|ID2" />
+			<GroupElement ID="ID0" Revision="Revision0" Required="false" Summary="Summary0" Detail="Detail0" TestIDs="ID0" />
+			<GroupElement ID="ID1" Revision="Revision1" Required="true" Summary="Summary1" Detail="Detail1" TestIDs="ID0|ID1" />
+			<GroupElement ID="ID2" Revision="Revision2" Required="true" Summary="Summary2" Detail="Detail2" TestIDs="ID0|ID1|ID2" />
 			<!-- Spaces are permitted in GroupElement fields. -->
 		</GroupElements>
 	</GroupElementsSection>
