--- a/App.config
+++ b/App.config
@@ -85,7 +85,7 @@
 			<GroupElement ID="ID0" Revision="Revision0" Required="false" Summary="Summary0" Detail="Detail0" TestIDs="ID0" />
 			<GroupElement ID="ID1" Revision="Revision1" Required="true" Summary="Summary1" Detail="Detail1" TestIDs="ID0|ID1" />
 			<GroupElement ID="ID2" Revision="Revision2" Required="true" Summary="Summary2" Detail="Detail2" TestIDs="ID0|ID1|ID2" />
-			<!-- Spaces are permitted in GroupElement fields. -->
+			<!-- GroupElement Revisions 1.0 are initial releases. -->
 		</GroupElements>
 	</GroupElementsSection>
 	<TestElementsSection>
@@ -154,11 +154,7 @@
 					°Celcius, seconds, hertz, watts, volt-amperes.
 					https://en.wikipedia.org/wiki/SI_base_unit
 					https://en.wikipedia.org/wiki/SI_derived_unit
-					- Reccommend "N/A" when Units are Not Applicable:
-						- Unlike TestElement Revision, Units always recorded
-						  into the official test data, so explicit statement
-						  of inapplicability reccommended, rather then 
-						  implicit "".
+					- Reccommend "" when Units aren't applicable.
 					- NOTE: do not use Metric prefixes:
 						- That is, do not use micro, milli, kilo, mega, etc.
 						  or their μ, m, k, M, etc. symbols either.
@@ -230,8 +226,9 @@
 			<TestElement ID="ID6" Summary="Summary6" Detail="Detail6" LimitLow="1" LimitHigh="1" Units="Units6" UnitType="UnitType6" />
 			<TestElement ID="ID7" Summary="Summary7" Detail="Detail7" LimitLow="0" LimitHigh="" Units="Units7" UnitType="UnitType7" />
 			<TestElement ID="ID8" Summary="Summary8" Detail="Detail8" LimitLow="" LimitHigh="1" Units="Units8" UnitType="UnitType8" />
-			<TestElement ID="ID9" Summary="Summary9" Detail="Detail9" LimitLow="Limit" LimitHigh="Limit" Units="N/A" UnitType="UnitType9" />
+			<TestElement ID="ID9" Summary="Summary9" Detail="Detail9" LimitLow="Limit" LimitHigh="Limit" Units="" UnitType="UnitType9" />
 			<TestElement ID="ID10" Summary="Summary10" Detail="Detail10" LimitLow="CUSTOM" LimitHigh="CUSTOM" Units="Units10" UnitType="UnitType10" />
+			<!-- TestElement Revisions 1.0 are initial releases. -->
 		</TestElements>
 	</TestElementsSection>
 	<runtime>
