--- a/App.config
+++ b/App.config
@@ -134,7 +134,7 @@
 					- 1.5E-5 is valid instead of 0.000015.
 					- Postive/Negative +/- signs allowed in both exponent & significand:
 					+1.0E+5 is valid for +100000.0.
-						- Reccommend 1.0E5 though.
+						- Recommend 1.0E5 though.
 					-1.0E5 is valid for -1000000.0.
 					1.5E-5 is valid for 0.000015.
 					-1.5E-5 is valid for -0.000015.
@@ -154,7 +154,7 @@
 					°Celcius, seconds, hertz, watts, volt-amperes.
 					https://en.wikipedia.org/wiki/SI_base_unit
 					https://en.wikipedia.org/wiki/SI_derived_unit
-					- Reccommend "" when Units aren't applicable.
+					- Recommend "" when Units aren't applicable.
 					- NOTE: do not use Metric prefixes:
 						- That is, do not use micro, milli, kilo, mega, etc.
 						  or their μ, m, k, M, etc. symbols either.
