--- a/App.config
+++ b/App.config
@@ -82,9 +82,9 @@
 
 	-->
 		<GroupElements>
-			<GroupElement ID="ID0" Revision="Revision0" Required="false" Summary="Summary0" Detail="Detail0" TestIDs="ID0" />
-			<GroupElement ID="ID1" Revision="Revision1" Required="true" Summary="Summary1" Detail="Detail1" TestIDs="ID0|ID1" />
-			<GroupElement ID="ID2" Revision="Revision2" Required="true" Summary="Summary2" Detail="Detail2" TestIDs="ID0|ID1|ID2" />
+			<GroupElement	ID="ID0"	Revision="Revision0"	Required="false"	Summary="Summary0"	Detail="Detail0"	TestIDs="ID0|ID9|ID10"	/>
+			<GroupElement	ID="ID1"	Revision="Revision1"	Required="true"		Summary="Summary1"	Detail="Detail1"	TestIDs="ID0|ID6|ID7|ID8"	/>
+			<GroupElement	ID="ID2"	Revision="Revision2"	Required="true"		Summary="Summary2"	Detail="Detail2"	TestIDs="ID0|ID1|ID2|ID3|ID4|ID5"	/>
 			<!-- GroupElement Revisions 1.0 are initial releases. -->
 		</GroupElements>
 	</GroupElementsSection>
@@ -217,17 +217,17 @@
 				- Tradeoff is LimitLow/LimitHigh aren't defined or modifiable from this App.config file, only defined/modifiable in the Test's method.
 		-->
 		<TestElements>
-			<TestElement ID="ID0" Summary="Summary0" Detail="Detail0" LimitLow="" LimitHigh="" Units="Units0" UnitType="UnitType0" />
-			<TestElement ID="ID1" Summary="Summary1" Detail="Detail1" LimitLow="" LimitHigh="LimitHigh" Units="Units1" UnitType="UnitType1" />
-			<TestElement ID="ID2" Summary="Summary2" Detail="Detail2" LimitLow="LimitLow" LimitHigh="" Units="Units2" UnitType="UnitType2" />
-			<TestElement ID="ID3" Summary="Summary3" Detail="Detail3" LimitLow="LimitLow" LimitHigh="LimitHigh" Units="Units3" UnitType="UnitType3" />
-			<TestElement ID="ID4" Summary="Summary4" Detail="Detail4" LimitLow="0" LimitHigh="1" Units="Units4" UnitType="UnitType4" />
-			<TestElement ID="ID5" Summary="Summary5" Detail="Detail5" LimitLow="1" LimitHigh="0" Units="Units5" UnitType="UnitType5" />
-			<TestElement ID="ID6" Summary="Summary6" Detail="Detail6" LimitLow="1" LimitHigh="1" Units="Units6" UnitType="UnitType6" />
-			<TestElement ID="ID7" Summary="Summary7" Detail="Detail7" LimitLow="0" LimitHigh="" Units="Units7" UnitType="UnitType7" />
-			<TestElement ID="ID8" Summary="Summary8" Detail="Detail8" LimitLow="" LimitHigh="1" Units="Units8" UnitType="UnitType8" />
-			<TestElement ID="ID9" Summary="Summary9" Detail="Detail9" LimitLow="Limit" LimitHigh="Limit" Units="" UnitType="UnitType9" />
-			<TestElement ID="ID10" Summary="Summary10" Detail="Detail10" LimitLow="CUSTOM" LimitHigh="CUSTOM" Units="Units10" UnitType="UnitType10" />
+			<TestElement	ID="ID0"	Revision="Revision0"	Summary="Summary0"	Detail="Detail0"	LimitLow=""			LimitHigh=""			Units="Units0"	UnitType="UnitType0"	/>
+			<TestElement	ID="ID1"	Revision="Revision1"	Summary="Summary1"	Detail="Detail1"	LimitLow=""			LimitHigh="LimitHigh"	Units="Units1"	UnitType="UnitType1"	/>
+			<TestElement	ID="ID2"	Revision="Revision2"	Summary="Summary2"	Detail="Detail2"	LimitLow="LimitLow"	LimitHigh=""			Units="Units2"	UnitType="UnitType2"	/>
+			<TestElement	ID="ID3"	Revision="Revision3"	Summary="Summary3"	Detail="Detail3"	LimitLow="LimitLow"	LimitHigh="LimitHigh"	Units="Units3"	UnitType="UnitType3"	/>
+			<TestElement	ID="ID4"	Revision="Revision4"	Summary="Summary4"	Detail="Detail4"	LimitLow="0"		LimitHigh="1"			Units="Units4"	UnitType="UnitType4"	/>
+			<TestElement	ID="ID5"	Revision="Revision5"	Summary="Summary5"	Detail="Detail5"	LimitLow="1"		LimitHigh="0"			Units="Units5"	UnitType="UnitType5"	/>
+			<TestElement	ID="ID6"	Revision="Revision6"	Summary="Summary6"	Detail="Detail6"	LimitLow="1"		LimitHigh="1"			Units="Units6"	UnitType="UnitType6"	/>
+			<TestElement	ID="ID7"	Revision="Revision7"	Summary="Summary7"	Detail="Detail7"	LimitLow="0"		LimitHigh=""			Units="Units7"	UnitType="UnitType7"	/>
+			<TestElement	ID="ID8"	Revision="Revision8"	Summary="Summary8"	Detail="Detail8"	LimitLow=""			LimitHigh="1"			Units="Units8"	UnitType="UnitType8"	/>
+			<TestElement	ID="ID9"	Revision="Revision7"	Summary="Summary9"	Detail="Detail9"	LimitLow="Limit"	LimitHigh="Limit"		Units=""		UnitType="UnitType9"	/>
+			<TestElement	ID="ID10"	Revision="Revision8"	Summary="Summary10"	Detail="Detail10"	LimitLow="CUSTOM"	LimitHigh="CUSTOM"		Units="Units10"	UnitType="UnitType10"	/>
 			<!-- TestElement Revisions 1.0 are initial releases. -->
 		</TestElements>
 	</TestElementsSection>
