--- a/App.config
+++ b/App.config
@@ -82,6 +82,11 @@
 
 	-->
 		<GroupElements>
+			<!-- &#x9; is the tab character in XML format. -->
+			<!-- &#xD is the carriage return character in XML format. -->
+			<!-- &#xA; is the linefeed character in XML format. -->
+			<!-- &#xD;&#xA; together comprise a standard Windows carriage return/linefeed in XML format. -->
+			<!-- Above XML control characters embed tabs & carriage return/linefeeds into the Detail field's text. -->
 			<GroupElement	ID="ID0"	Revision="Revision0"	Required="false"	Summary="Summary0"	Detail="Detail0"	TestIDs="ID0|ID9|ID10"	/>
 			<GroupElement	ID="ID1"	Revision="Revision1"	Required="true"		Summary="Summary1"	Detail="Detail1"	TestIDs="ID0|ID6|ID7|ID8"	/>
 			<GroupElement	ID="ID2"	Revision="Revision2"	Required="true"		Summary="Summary2"	Detail="Detail2"	TestIDs="ID0|ID1|ID2|ID3|ID4|ID5"	/>
