--- a/App.config
+++ b/App.config
@@ -35,14 +35,14 @@
 		<!--
 	ID:			Required field.
 				- Unique Identifier; no 2 can be identical, as ID is unique key in a Dictionary object.
-				- Suggest T10, T20, T30, T40... ABT FilePro Traveler Test Operations.
+				- Suggest T-10, T-20, T-30... ABT FilePro Traveler Test Operations.
 	Required:	Required field.
 				- If Required = true, it's a Group of Tests the UUT's customer requires
 					be executed & pass in order to ship the UUT.
 				- Required Groups generally correspond to FilePro Traveler
-					operations; T10, T20, T30...
+					operations; T-10, T-20, T-30...
 				- Multiple Groups can be required, if there are multiple
-					FilePro Test Operations; T10, T20, T30...
+					FilePro Test Operations; T-10, T-20, T-30...
 				- If Required = false, Group is a custom subset of Tests
 					solely useful for troubleshooting UUTs that don't pass
 					their Required Groups.
@@ -53,7 +53,7 @@
 				- Order of Group appearance in this App.config determines order of
 					appearance when selecting Groups in GroupSelection ListView,
 					so optimally order them in the sequence they're performed;
-				    (T10, T20, T30...)
+				    (T-10, T-20, T-30...)
 	Revision:	Required field.
 				- Revision of the Test Group's GroupElement.
 				- Increment whenever any GroupElement field in Group changes; particularly when TestIDs are added or removed.
@@ -97,7 +97,7 @@
 		<!--
 	ID:			Required field.
 				- Unique Identifier; no 2 can be identical, as ID is unique key in a Dictionary object.
-				- Test001, Test002, Test003...
+				- T01, T02, T03...
 				- *Must* also be a valid C# identifier; see 
 				  https://learn.microsoft.com/en-us/dotnet/csharp/fundamentals/coding-style/identifier-names.
 				- Recommend alpha-numerically ordering to avoid duplications,
@@ -107,8 +107,8 @@
 				- Cannot contain | character.
 					- Using character '|' to separate GroupsToTestsElement IDTests.
 					- Thus TestElement IDs cannot contain character '|' in them.
-					- ID="Test001 valid.
-					- ID="Test|001" invalid
+					- ID="T01 valid.
+					- ID="T|1" invalid
 	Revision:	Required field.
 				- Revision of the Test's TestElement.
 				- Increment whenever any TestElement field in Test changes; particularly
