--- a/TestLibrary.csproj
+++ b/TestLibrary.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{314614CB-6E17-4B74-A9F9-CE4699F78C9B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ABTTestLibrary</RootNamespace>
-    <AssemblyName>ABTTestLibrary</AssemblyName>
+    <RootNamespace>TestLibrary</RootNamespace>
+    <AssemblyName>TestLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -44,11 +44,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="LibraryForm.cs">
+    <Compile Include="TestLibrary.Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LibraryForm.Designer.cs">
-      <DependentUpon>LibraryForm.cs</DependentUpon>
+    <Compile Include="TestLibrary.Form.Designer.cs">
+      <DependentUpon>TestLibrary.Form.cs</DependentUpon>
     </Compile>
     <Compile Include="Config\ConfigGroups.cs" />
     <Compile Include="Config\ConfigLib.cs" />
@@ -80,8 +80,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="LibraryForm.resx">
-      <DependentUpon>LibraryForm.cs</DependentUpon>
+    <EmbeddedResource Include="TestLibrary.Form.resx">
+      <DependentUpon>TestLibrary.Form.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Config\GroupSelection.resx">
